@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2006-2007 by Konstantin V. Arkhipov                     *
+ *   Copyright (C) 2006-2008 by Konstantin V. Arkhipov                     *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU Lesser General Public License as        *
@@ -17,6 +17,8 @@
 	**/
 	final class ImageType extends Enumeration
 	{
+		const IMAGETYPE_PJPEG	= 100;
+		
 		const GIF		= IMAGETYPE_GIF;
 		const JPEG		= IMAGETYPE_JPEG;
 		const PNG		= IMAGETYPE_PNG;
@@ -34,31 +36,34 @@
 		const WBMP		= IMAGETYPE_WBMP;
 		const JPEG2000	= IMAGETYPE_JPEG2000;
 		const XBM		= IMAGETYPE_XBM;
+		const PJPEG		= self::IMAGETYPE_PJPEG;
 		
 		protected $names = array(
-			IMAGETYPE_GIF		=> 'gif',
-			IMAGETYPE_JPEG		=> 'jpeg',
-			IMAGETYPE_PNG		=> 'png',
-			IMAGETYPE_SWF		=> 'swf',
-			IMAGETYPE_PSD		=> 'psd',
-			IMAGETYPE_BMP		=> 'bmp',
-			IMAGETYPE_TIFF_II	=> 'tif',
-			IMAGETYPE_TIFF_MM	=> 'tif',
-			IMAGETYPE_JPC		=> 'jpc',
-			IMAGETYPE_JP2		=> 'jp2',
-			IMAGETYPE_JPX		=> 'jpx',
-			IMAGETYPE_JB2		=> 'jb2',
-			IMAGETYPE_SWC		=> 'swc',
-			IMAGETYPE_IFF		=> 'iff',
-			IMAGETYPE_WBMP		=> 'bmp',
-			IMAGETYPE_JPEG2000	=> 'jpc',
-			IMAGETYPE_XBM		=> 'xbm'
+			IMAGETYPE_GIF			=> 'gif',
+			IMAGETYPE_JPEG			=> 'jpeg',
+			IMAGETYPE_PNG			=> 'png',
+			IMAGETYPE_SWF			=> 'swf',
+			IMAGETYPE_PSD			=> 'psd',
+			IMAGETYPE_BMP			=> 'bmp',
+			IMAGETYPE_TIFF_II		=> 'tif',
+			IMAGETYPE_TIFF_MM		=> 'tif',
+			IMAGETYPE_JPC			=> 'jpc',
+			IMAGETYPE_JP2			=> 'jp2',
+			IMAGETYPE_JPX			=> 'jpx',
+			IMAGETYPE_JB2			=> 'jb2',
+			IMAGETYPE_SWC			=> 'swc',
+			IMAGETYPE_IFF			=> 'iff',
+			IMAGETYPE_WBMP			=> 'bmp',
+			IMAGETYPE_JPEG2000		=> 'jpc',
+			IMAGETYPE_XBM			=> 'xbm',
+			self::IMAGETYPE_PJPEG	=> 'jpeg'
 		);
 		
 		protected $extensions = array(
 			'gif'	=> IMAGETYPE_GIF,
 			'jpg'	=> IMAGETYPE_JPEG,
 			'jpeg'	=> IMAGETYPE_JPEG,
+			'pjpeg'	=> self::IMAGETYPE_PJPEG,
 			'png'	=> IMAGETYPE_PNG,
 			'swf'	=> IMAGETYPE_SWF,
 			'psd'	=> IMAGETYPE_PSD,
@@ -77,23 +82,24 @@
 		);
 		
 		protected $mimeTypes = array(
-			IMAGETYPE_GIF		=> 'image/gif',
-			IMAGETYPE_JPEG		=> 'image/jpeg',
-			IMAGETYPE_PNG		=> 'image/png',
-			IMAGETYPE_SWF		=> 'application/x-shockwave-flash',
-			IMAGETYPE_PSD		=> 'image/x-photoshop',
-			IMAGETYPE_BMP		=> 'image/bmp',
-			IMAGETYPE_TIFF_II	=> 'image/tiff',
-			IMAGETYPE_TIFF_MM	=> 'image/tiff',
-			IMAGETYPE_JPC		=> 'image/jpc',
-			IMAGETYPE_JP2		=> 'image/jp2',
-			IMAGETYPE_JPX		=> 'image/jpx',
-			IMAGETYPE_JB2		=> 'image/jb2',
-			IMAGETYPE_SWC		=> 'application/x-shockwave-flash',
-			IMAGETYPE_IFF		=> 'image/iff',
-			IMAGETYPE_WBMP		=> 'image/vnd.wap.wbmp',
-			IMAGETYPE_JPEG2000	=> 'image/jpeg',
-			IMAGETYPE_XBM		=> 'image/xbm'
+			IMAGETYPE_GIF			=> 'image/gif',
+			IMAGETYPE_JPEG			=> 'image/jpeg',
+			IMAGETYPE_PNG			=> 'image/png',
+			IMAGETYPE_SWF			=> 'application/x-shockwave-flash',
+			IMAGETYPE_PSD			=> 'image/x-photoshop',
+			IMAGETYPE_BMP			=> 'image/bmp',
+			IMAGETYPE_TIFF_II		=> 'image/tiff',
+			IMAGETYPE_TIFF_MM		=> 'image/tiff',
+			IMAGETYPE_JPC			=> 'image/jpc',
+			IMAGETYPE_JP2			=> 'image/jp2',
+			IMAGETYPE_JPX			=> 'image/jpx',
+			IMAGETYPE_JB2			=> 'image/jb2',
+			IMAGETYPE_SWC			=> 'application/x-shockwave-flash',
+			IMAGETYPE_IFF			=> 'image/iff',
+			IMAGETYPE_WBMP			=> 'image/vnd.wap.wbmp',
+			IMAGETYPE_JPEG2000		=> 'image/jpeg',
+			IMAGETYPE_XBM			=> 'image/xbm',
+			self::IMAGETYPE_PJPEG	=> 'image/pjpeg'
 		);
 		
 		public static function getAnyId()
