@@ -1,5 +1,10 @@
 # $Id$
 
+2008-09-04	Konstantin V. Arkhipov
+
+	* main/Base/ImageType.class.php: progressive jpeg type added, patch
+	submitted by Konstantin Scheglov <k.s.scheglov@gmail.com>.
+
 2008-09-02	Denis M. Gabaidulin
 
 	* main/Utils/DateUtils: makeFirstDayOfMonth(), makeLastDayOfMonth() added.
